force-app/main/default/objects/HP_Mediatech_Parameter__mdt/HP_Mediatech_Parameter__mdt.object-meta.xml
<CustomObject>
    <description>Table de correspondance pour les sous-types de requêtes et Id correspondance (wrapup_id, API Meditech)</description>
    <label>HP Mediatech Parameter</label>
    <pluralLabel>HP Mediatech Parameters</pluralLabel>
</CustomObject>