force-app/main/default/objects/HP_Mediatech_Parameter__mdt/fields/Case_sous_type__c.field-meta.xml
<CustomField>
    <fullName>Case_sous_type__c</fullName>
    <label>Case sous type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>