force-app/main/default/objects/HP_Mediatech_Parameter__mdt/fields/Correspondance_ID_Tel__c.field-meta.xml
<CustomField>
    <fullName>Correspondance_ID_Tel__c</fullName>
    <label>Correspondance ID Tel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>