force-app/main/default/objects/HP_Mediatech_Parameter__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Case_sous_type__c</columns>
    <columns>Correspondance_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>